--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0"
   },
